# graduation-thesis

./: .clang-format  .gitignore  .gitmodules  README.md  architecture.md
docs/: README.md  輪講スケジュール.md
docs/サーベイ論文1/: Makefile  README.md  comment.md  main.aux  main.fdb_latexmk  main.fls  main.tex
docs/議事録/: 2023_05_19.md  weekly_meeting_0515.md  weekly_meeting_0612.md
model/: main-asm.glb
model/parts/: asm-main.SLDASM  base-1.SLDPRT  base-2.SLDPRT  base-3.SLDPRT  base-plate-1.SLDPRT
model/parts/link1/: hand-link-1.SLDPRT  hand-link-2.SLDPRT  hand-link-4.SLDPRT  link-link1.SLDPRT  link-mover-1.SLDPRT  link-stoppter-1.SLDPRT  link1-1.SLDPRT  link2-1.SLDPRT  link2.SLDPRT  link3-1.SLDPRT  shoulder-gear-cover.SLDPRT
model/parts/motor/: motor-asm.SLDASM  motor-main.SLDPRT  motor-mount1.SLDPRT
src/common/: communication_const.hpp
src/h4rc_master_slave_servooff_sample_cpp/: CMakeLists.txt  sample.cpp  可動範囲.txt
src/maestro/: .cproject  .gitignore  CMakeLists.txt  Makefile  README.md  TorqueControl.cpp  TorqueControl.hpp  build.bat  common.hpp  compile_flags.txt  connect.sh  logger.h  send_file.bat  send_file.sh  server_test.cpp  simple_bilateral.cpp  simple_bilateral_pc_powered.cpp  test_project2.cpp  test_project2.h  test_project2_GOLD_D.launch  test_project2_PLATINUM_D.launch  test_project2_PLATINUM_R.launch
src/maestro/src/: TorqueControl.cpp  TorqueControl.hpp  common.cpp  common.h  get_cmmc_exception_error_message.hpp  hr4c.cpp  hr4c.hpp  logger.h
src/pc/: CMakeLists.txt  README.md  axis_plot.cpp  common.hpp  config.toml  imgui_test.cpp  pc_test1.cpp  read_all_axis.cpp  single_axis_test.cpp
src/pc/h4rc/: AxisInterface.cpp  AxisInterface.hpp  ModbusMaster.hpp  ModbusServer.cpp  h4rc.hpp
src/pc/hr4c/: AxisInterface.cpp  AxisInterface.hpp  CMakeLists.txt  ModbusClient.cpp  ModbusClient.hpp  h4rc.cpp  h4rc.hpp  logger.hpp  robot.hpp
src/pc/hr4c/core/: AxisInterface.cpp  ModbusClient.cpp  ModbusClient.hpp  h4rc.hpp  robot.hpp
src/pc/hr4c/graphics/: gui.cpp  gui.hpp
unused/h4rc_master_slave_servooff_sample_cpp/: README.md  sample.cpp  可動範囲.txt
unused/hr4c_api/: __init__.py
unused/hr4c_api/core/: hr4c_api.py  hr4c_comm.py
unused/hr4c_api/examples/: green_modelk_alarm_reset.py  green_modelk_collision_stop.py  green_modelk_current_control.py  green_modelk_gravity_compensation.py  green_modelk_pick_and_place.py  green_modelk_position_control.py  green_modelk_servo_all_off.py  green_modelk_set_control_mode.py  green_modelk_speed_control.py  green_modelk_torque_control.py  green_modelk_wipe.py
unused/hr4c_api/robots/: green_6axis.py  green_modelk.py  hr4c_robotbase.py
unused/hr4c_api/scripts/: local_install.sh
unused/hr4c_api/utils/: green_modelk_create_gravity_compensation_table.py  green_modelk_interactive_calibration.py  green_modelk_manual_calibration_j1j2j3.py  green_modelk_manual_calibration_j4j5j6.py  green_modelk_payload_test.py  log_analyzer.py  update_controller_binary.py
unused/hr4c_cpp_sample/: sample.cpp
unused/hr4c_cpp_samples/hr4c_master_slave_sample/: CMakeLists.txt  sample.cpp
unused/hr4c_cpp_samples/hr4c_master_slave_sample_with_allsensor/: sample.cpp
unused/libhr4c/: libhr4c_comm.h  zerog_mode_correction.yaml
unused/maestro/gainTune_hostPC-master/: .gitignore  CMakeLists.txt
unused/maestro/gainTune_hostPC-master/src/: AxisInterface.cpp  AxisInterface.h  encusb.cpp  encusb.hpp  filter.cpp  filter.hpp  mas3if.cpp  mas3if.hpp  test.cpp  test.cpp~  test.hpp  test.hpp~
unused/maestro/gainTune_maestro-master/: .cproject  .gitignore  .project  README.md  TorControls.cpp  TorControls.h  gainTuner.cpp  gainTuner.h  gainTuner_PLATINUM_D.launch
unused/maestro/secondGlv_maestro-master/: .gitignore  README.md  TorControls.cpp  TorControls.h  remoteSecondGlove.cpp  remoteSecondGlove.h
unused/maestro/templates/: move_absolute_templat.hpp  move_absolute_template.cpp  power_onoff_template.cpp  power_onoff_template.hpp
unused/ohmura_test/test1/: sample.cpp  sample.cpp~
unused/ohmura_test/test2/: sample.cpp  sample.cpp~
unused/ohmura_test/test3/: CMakeLists.txt  filter.cpp  filter.cpp~  filter.hpp  sample.cpp  sample.cpp~
unused/ohmura_test/test4/: README.md  sample.cpp  sample.cpp~
unused/work/hr4c_comm/: CMakeLists.txt
unused/work/hr4c_comm/include/: command_service.h  hr4c_comm.h  socket_handler.h
unused/work/hr4c_comm/src/: command_service.cpp  config.yaml  hr4c_comm.cpp  hr4c_comm_wrapper.cpp  socket_handler.cpp
unused/work/libhr4c_core/: CMakeLists.txt
unused/work/libhr4c_core/include/: hr4c_core.h
unused/work/libhr4c_core/include/algorithm/: interpolator.h  linear_interpolator.h  minjerk_interpolator.h
unused/work/libhr4c_core/include/motor_controller/: motor_control.h  motor_state.h
unused/work/libhr4c_core/include/net/: socketservice_handler.h  telegram_parser.h  udp_client.h
unused/work/libhr4c_core/include/services/: ddm_control_service.h
unused/work/libhr4c_core/include/utils/: hr4c_utils.h
unused/work/libhr4c_core/scripts/: deploy.sh
unused/work/libhr4c_core/src/: hr4c_core.cpp
unused/work/libhr4c_core/src/algorithm/: linear_interpolator.cpp  minjerk_interpolator.cpp
unused/work/libhr4c_core/src/motor_controller/: motor_control.cpp
unused/work/libhr4c_core/src/net/: socketservice_handler.cpp  telegram_parser.cpp
unused/work/libhr4c_core/src/services/: ddm_control_service.cpp
unused/work/libhr4c_core/src/utils/: hr4c_utils.cpp
